--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>King Bumi - King and a friend</title>
     <<link rel="stylesheet" type="text/css"  href="style.css" /> 
+    <script async defer crossorigin="anonymous"
+    src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v18.0"
+    nonce="EinsteinLike">
+  </script>
 
 </head>
 <body>
@@ -190,13 +194,19 @@
 
     <br><br><br><br><br>
 
-    <section id="like">
-      <div class="White-background">
+    <section id="like" class="section" > 
+      <div class="White-background" >
         <h2 style="text-align: center;">  Like Me 👍 </h2>
-
-        <p style="text-align: center;">
-          Click the Like button to support King Bumi's legacy on Facebook.
+        <p style="font-size: 18px; color: #444; max-width: 600px; margin: 0 auto 20px;">
+          Click the Like button to support Albert Einstein's legacy on Facebook.
         </p>
+        <div class="fb-like" 
+             data-href="https://www.facebook.com/facebook" 
+             data-layout="button" 
+             data-action="like" 
+             data-size="large" 
+             data-share="true">
+        </div>
       </div>
 
     </section>
@@ -204,10 +214,10 @@
     <br><br><br><br><br>
     
     <section id="QR">
-      <div class="White-background">
+      <div class="White-background" style="text-align: center;">
         <h2 style="text-align: center;"> Scan My Website </h2>
         <p>
-        <img src="קוד - QR.png" alt="קוד" class="QR highlight-on-hover">
+        <img src="images/QR code.png" alt="קוד" class="image highlight-on-hover">
         </p>
       </div>
 
