Add like bottun

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div id = "menu">
     <div class="logo">
-      <img src="images/בובה.jpg" alt="Logo Of Bumi" class="logo-img">
+      <img src="images/doll of King Bumi.jpg" alt="Logo Of Bumi" class="logo-img">
     </div>
 
     <il>
@@ -110,52 +110,52 @@
         <h2 style="text-align: center;"> My Photos</h2>
         <div style="text-align: center;">
           <figure>
-            <img src="images/Bumi and Aang.webp" alt="תמונה 1" class="image highlight-on-hover ">
+            <img src="images/Bumi and Aang.webp" class="image highlight-on-hover ">
             <figcaption> Bumi and Aang 100 years ago</figcaption>
           </figure>
 
           <figure>
-            <img src="images/Bumi in jail.jpg" alt="תמונה 1" class="image highlight-on-hover ">
+            <img src="images/Bumi in jail.jpg" class="image highlight-on-hover ">
             <figcaption> King Bumi before his release from prison. </figcaption>
           </figure>
 
           <figure>
-            <img src="images/Bumi fight in Aang.webp" alt="תמונה 1" class="image highlight-on-hover ">
+            <img src="images/Bumi fight in Aang.webp" class="image highlight-on-hover ">
             <figcaption> King Bumi fights Aang</figcaption>
           </figure>
 
           <figure>
-            <img src="images/Bumi fight in fire nation.jpg" alt="תמונה 1" class="image highlight-on-hover ">
+            <img src="images/Bumi fight in fire nation.jpg" class="image highlight-on-hover ">
             <figcaption>King Bumi regained control of the city of Omshu on the "Day of the Black Sun" </figcaption>
           </figure>
 
           <figure>
-            <img src="images/Bumi Sliding with Aang.png" alt="תמונה 1" class="image highlight-on-hover ">
+            <img src="images/Bumi Sliding with Aang.png" class="image highlight-on-hover ">
             <figcaption> King Bumi accepted the challenge that Aang set for him.</figcaption>
           </figure>
 
           <figure>
-            <img src="images/Bumi in prison.webp" alt="תמונה 1" class="image highlight-on-hover ">
+            <img src="images/Bumi in prison.webp" class="image highlight-on-hover ">
             <figcaption> King Bumi speaks to Aang after he is imprisoned.</figcaption>
           </figure>
 
           <figure>
-            <img src="images/King Bumi.webp" alt="תמונה 1" class="image highlight-on-hover ">
+            <img src="images/King Bumi.webp" class="image highlight-on-hover ">
             <figcaption> King Bumi seeing his friend "Aang" after 100 years.</figcaption>
           </figure>
 
           <figure>
-            <img src="images/King-Bumi-resized.avif" alt="תמונה 1" class="image highlight-on-hover ">
+            <img src="images/King-Bumi-resized.avif" class="image highlight-on-hover ">
             <figcaption> King Bumi when Aang found out who he was. </figcaption>
           </figure>
 
           <figure>
-            <img src="images/Young_Bumi.webp" alt="תמונה 1" class="image highlight-on-hover ">
+            <img src="images/Young_Bumi.webp" class="image highlight-on-hover ">
             <figcaption> Bumi was born as a child in the city of Omshu 100 years ago.</figcaption>
           </figure>
 
           <figure>
-            <img src="images/מסדר_הלוטוס_הלבן.webp" alt="תמונה 1" class="image highlight-on-hover ">
+            <img src="images/White lotus orgenisation.webp"  class="image highlight-on-hover ">
             <figcaption> Together with his friends - the "Order of the White Lotus" when they captured the city of "Ba Sing Se" from the Fire Nation. </figcaption>
           </figure>
 
@@ -195,11 +195,12 @@
     <br><br><br><br><br>
 
     <section id="like" class="section" > 
-      <div class="White-background" >
-        <h2 style="text-align: center;">  Like Me 👍 </h2>
+      <div style="text-align: center;" class="White-background" >
+        <h2 >  Like Me 👍 </h2>
         <p style="font-size: 18px; color: #444; max-width: 600px; margin: 0 auto 20px;">
-          Click the Like button to support Albert Einstein's legacy on Facebook.
+          Click the Like button to support King Bumi's legacy on Facebook.
         </p>
+        <br>
         <div class="fb-like" 
              data-href="https://www.facebook.com/facebook" 
              data-layout="button" 
