--- a/index.html
+++ b/index.html
@@ -159,6 +159,15 @@
             <figcaption> Together with his friends - the "Order of the White Lotus" when they captured the city of "Ba Sing Se" from the Fire Nation. </figcaption>
           </figure>
 
+          <figure>
+            <img src="images/Bumi new suit.jpg"  class="image highlight-on-hover ">
+            <figcaption> Bumi's new suit. </figcaption>
+          </figure>
+
+          <figure>
+            <img src="images/Bumi fight Aang with Earthbanding.jpg"  class="image highlight-on-hover ">
+            <figcaption> Bumi fught Aang with Earthbanding </figcaption>
+          </figure>
 
         </div>
       </div>
@@ -264,7 +273,7 @@
 
     </section>
     
-<br><br><br><br><br>
+    <br><br><br><br><br>
 
     <section id="contact">
       <div class="White-background">
