--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <section id="photos">
       <div class="White-background">
         <h2 style="text-align: center;"> My Photos</h2>
-        <div style="text-align: center;">
+        <div style="text-align: center;" class="horizontal-scroll">
           <figure>
             <img src="images/Bumi and Aang.webp" class="image highlight-on-hover ">
             <figcaption> Bumi and Aang 100 years ago</figcaption>
