--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <img src="images/Bumi fight Aang with Earthbanding.jpg"  class="image highlight-on-hover ">
             <figcaption> Bumi fught Aang with Earthbanding </figcaption>
           </figure>
-          
+
         </div>
       </div>
 
@@ -199,7 +199,7 @@
     </section>
 
 
-    <section id="like" class="section" > 
+    <section id="like"> 
       <div style="text-align: center;" class="White-background" >
         <h2 >  Like Me 👍 </h2>
         <p style="font-size: 18px; color: #444; max-width: 600px; margin: 0 auto 20px;">
